assets/css/main.css
/* ... */
	.pics-exp-1 {
		position: absolute;
		top: 3em;
		right: -5em;
		width: 220px; /* Adjust the size as needed */
		height: auto;
	}
	.pics-exp-2 {
		position: absolute;
		top: 6em;
		right: -10em;
		width: 350px; /* Adjust the size as needed */
		height: auto;
	}
	.center-image {
		display: block; /* Images are inline by default, this changes it to block */
    	margin: 0 auto; /* Auto margin on both sides to center the block */
    	width: 20%; /* Adjust this as needed */
    	height: auto; /* Keeps the aspect ratio of the image */
	}

/* Nav */

	#nav {
		position: absolute;
		display: block;
		top: 2.5em;
		left: 0;
		width: 100%;
		text-align: center;
	}

		#nav > ul {
			display: inline-block;
			border-radius: 0.35em;
			box-shadow: inset 0px 0px 1px 1px rgba(255, 255, 255, 0.25);
			padding: 0 1.5em 0 1.5em;
		}

			#nav > ul > li {
				display: inline-block;
				text-align: center;
				padding: 0 1.5em 0 1.5em;
			}

				#nav > ul > li > ul {
					display: none;
				}

				#nav > ul > li > a, #nav > ul > li > span {
					display: block;
					color: #eee;
					color: rgba(255, 255, 255, 0.75);
					text-transform: uppercase;
					text-decoration: none;
					font-size: 0.7em;
					letter-spacing: 0.25em;
					height: 5em;
					line-height: 5em;
					-moz-transition: all .25s ease-in-out;
					-webkit-transition: all .25s ease-in-out;
					-o-transition: all .25s ease-in-out;
					-ms-transition: all .25s ease-in-out;
					transition: all .25s ease-in-out;
					outline: 0;
				}

				#nav > ul > li:hover > a {
					color: #fff;
				}

				#nav > ul > li.active > a, #nav > ul > li.active > span {
					color: #fff;
				}

	.dropotron {
		background: #222835 url("images/overlay.png");
		background-color: rgba(44, 50, 63, 0.925);
		padding: 1.25em 1em 1.25em 1em;
		border-radius: 0.35em;
		box-shadow: inset 0px 0px 1px 1px rgba(255, 255, 255, 0.25);
		min-width: 12em;
		text-align: left;
		margin-top: -1.25em;
		margin-left: -1px;
		list-style: none;
	}

		.dropotron.level-0 {
			margin-top: -1px;
			margin-left: 0;
			border-top-left-radius: 0;
			border-top-right-radius: 0;
		}

		.dropotron a, .dropotron span {
			-moz-transition: all .25s ease-in-out;
			-webkit-transition: all .25s ease-in-out;
			-ms-transition: all .25s ease-in-out;
			transition: all .25s ease-in-out;
			display: block;
			color: #eee;
			color: rgba(255, 255, 255, 0.75);
			text-transform: uppercase;
			text-decoration: none;
			font-size: 0.7em;
			letter-spacing: 0.25em;
			border-top: solid 1px rgba(255, 255, 255, 0.15);
			line-height: 3em;
		}

		.dropotron li {
			padding-left: 0;
		}

			.dropotron li:first-child a, .dropotron li:first-child span {
				border-top: 0;
			}

			.dropotron li:hover > a, .dropotron li:hover > span {
				color: #fff;
			}

/* Intro */

	#intro {
		padding-bottom: 8em;
		text-align: center;
	}

		#intro p.style1 {
			font-size: 1.5em;
			letter-spacing: 0.075em;
		}

		#intro p.style2 {
			font-weight: 700;
			color: #fff;
			border-radius: 0.35em;
			box-shadow: inset 0px 0px 1px 1px rgba(255, 255, 255, 0.25);
			font-size: 2.75em;
			letter-spacing: 0.075em;
			line-height: 1.35em;
			padding: 1em 0 1em 0;
			margin-bottom: 1em;
		}

			#intro p.style2 a {
				color: inherit;
				text-decoration: none;
			}

		#intro p.style3 {
			font-size: 1.1em;
			width: 48em;
			margin: 0 auto;
		}

/* Features */

	#features header.style1 {
		padding-bottom: 5em;
	}

	#features ul.actions {
		margin-top: 5em;
	}

/* Highlights */

	#highlights .highlight {
		text-align: center;
	}

		#highlights .highlight h3 {
			color: #e97770;
			margin: 0 0 0.75em 0;
			font-size: 1.15em;
			letter-spacing: 0.05em;
		}

/* Main */

/* Footer */

	#footer {
		background: #282b34 url("images/overlay.png");
		color: #eee;
		color: rgba(255, 255, 255, 0.5);
		padding-bottom: 6em;
	}

		#footer h1, #footer h2, #footer h3, #footer h4, #footer h5, #footer h6, #footer strong, #footer b, #footer a {
			color: #fff;
		}

		#footer hr {
			border-top-color: #333;
			border-top-color: rgba(255, 255, 255, 0.05);
		}

		#footer form input[type="text"],
		#footer form input[type="email"],
		#footer form input[type="password"],
		#footer form select,
		#footer form textarea {
			background: #ccc;
			box-shadow: none;
		}

			#footer form input[type="text"]:focus,
			#footer form input[type="email"]:focus,
			#footer form input[type="password"]:focus,
			#footer form select:focus,
			#footer form textarea:focus {
				background: #fff;
			}

		#footer input[type="button"],
		#footer input[type="submit"],
		#footer input[type="reset"],
		#footer button,
		#footer .button {
			color: #fff;
			box-shadow: inset 0px 0px 2px 0px rgba(255, 255, 255, 0.5);
		}

			#footer input[type="button"]:hover,
			#footer input[type="submit"]:hover,
			#footer input[type="reset"]:hover,
			#footer button:hover,
			#footer .button:hover {
				color: #fff;
				box-shadow: inset 0px 0px 2px 0px rgba(255, 255, 255, 0.65);
			}

			#footer input[type="button"]:active,
			#footer input[type="submit"]:active,
			#footer input[type="reset"]:active,
			#footer button:active,
			#footer .button:active {
				box-shadow: inset 0px 0px 2px 0px rgba(255, 255, 255, 0.75);
			}

			#footer input[type="button"].style2:active,
			#footer input[type="submit"].style2:active,
			#footer input[type="reset"].style2:active,
			#footer button.style2:active,
			#footer .button.style2:active {
				box-shadow: inset 0px 0px 2px 0px rgba(255, 255, 255, 0.75);
			}

		#footer .title {
			background: #282b34 url("images/overlay.png");
			color: #eee;
		}

		#footer header.style1 {
			padding-bottom: 6em;
			margin-bottom: 6em;
			border-bottom: solid 1px rgba(255, 255, 255, 0.05);
		}

			#footer header.style1 h2 {
				color: #fff;
			}

			#footer header.style1 .p {
				color: inherit;
			}

		#footer .feature-list {
			max-width: 100%;
		}

			#footer .feature-list section {
				border-top-color: rgba(255, 255, 255, 0.05);
			}
/* ... */

